# governed-commerece-lakehouse

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
dbt_governed_commerce/: .gitignore  dbt_project.yml  profiles.yml
dbt_governed_commerce/models/: sources.yml
dbt_governed_commerce/models/marts/: dim_customers.sql  dim_products.sql  dim_sellers.sql  fct_orders.sql  fct_payments.sql  marts_customer_360.sql  marts_delivery_performance.sql  marts_revenue_daily.sql  schema.yml
dbt_governed_commerce/models/staging/: stg_category_translation.sql  stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
ingestion/: download_olist.py  load_customers.py  load_to_postgres.py  run_ingestion.py  test_connection.py
quality/: configuration.yml.example
quality/checks/: connection_check.yml  mart_checks.yml  raw_checks.yml  staging_checks.yml
sql/: 01_create_schemas.sql  02_create_raw_tables.sql
